# pftt

./: .gitignore  LICENSE  README.md  pftt.cabal  stack.yaml
app/: .Main.hs.swp  Main.hs
src/: .Pftt.hs.swp  .Render.hs.swp  .Scene.hs.swp  .Util.hs.swp  Pftt.hs  Render.hs  Scene.hs  Util.hs
