name:                pftt
version:             0.1.0.0
synopsis:            parallel functional tiny (ray)tracer
--description:
homepage:            https://github.com/bohadi/pftt#readme
license:             BSD3
license-file:        LICENSE
author:              bohadi
maintainer:          bohadi@protonmail.com
copyright:           2017 bohadi
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pftt
                     , Util
                     , Scene
                     , Render
  build-depends:       base >= 4.7 && < 5
                     , timeit
                     , filepath
                     , JuicyPixels
  default-language:    Haskell2010

executable pftt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pftt
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bohadi/pftt
